--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 .purchase {
 	background-color: rgb(211, 243, 245);
+	text-align: center;
+}
+
+.purchase th {
+	background-color: #C2BBBB;
+	text-align: center;
 }
